mais ajustes
